feat: support Minecraft 26.2 (protocole 776)
Le proxy refusait les clients 26.2 : le protocole 776 n'existait pas dans
ProtocolVersion, les clients arrivaient en UNKNOWN et etaient rejetes.

Les identifiants de paquets sont inchanges entre 26.1 et 26.2 (verifie etat par
etat contre GameProtocols/ConfigurationProtocols/LoginProtocols decompiles de
BTC-CORE 26.2), mais trois charges utiles changent :

- login_finished : nouvel UUID sessionId en fin de trame. Sans lui le client
  echoue avec DecoderException. Le proxy expose desormais un identifiant de
  session partage, regenere quand le proxy se vide, comme un serveur vanilla.
- login (JoinGame) : nouveau booleen onlineMode avant enforcesSecureChat.
  TransitionSessionHandler remplace la valeur du backend par celle du proxy.
- brigadier : minecraft:color renomme minecraft:team_color (id 16 conserve).

MINIMUM_VERSION passe a 26.2 : les versions anterieures ne sont plus acceptees,
conformement au reseau qui tourne desormais entierement en 26.2.

Corrige aussi la detection des optimisations JVM : elle exigeait qu'un meme
argument contienne a la fois -XX:+UnlockExperimentalVMOptions et
-XX:+UseCompactObjectHeaders, ce qui ne peut jamais arriver puisque les
arguments JVM sont des chaines distinctes. L'avertissement s'affichait donc en
permanence, flag actif ou non. Remplace par une lecture de la valeur effective
via HotSpotDiagnosticMXBean, qui voit aussi les flags poses par ergonomie.

Embarque les accesseurs storage/bridge/proxyId de ProxyServer, deja presents
dans l'arbre de travail et necessaires a la compilation.